--- a/Group_5b/supervised_learning.ipynb
+++ b/Group_5b/supervised_learning.ipynb
@@ -4,6 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<sup>Fabio Giovanazzi</sup>\n",
+    "\n",
     "# Supervised learning\n",
     "A supervised learning model is built using **labelled** data. There are two categories od supervised learning models, based on how the output is:\n",
     "- **regression**: continuous output *(e.g. a model extracting the direction of a street given its photo)*\n",
@@ -64,6 +66,13 @@
     "## Deep neural networks\n",
     "The bleeding edge applications of neural networks"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
