Add Neural Network description to supervised learning notebook

--- a/Group_5b/supervised_learning.ipynb
+++ b/Group_5b/supervised_learning.ipynb
@@ -4,8 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<sup>Fabio Giovanazzi</sup>\n",
-    "\n",
     "# Supervised learning\n",
     "A supervised learning model is built using **labelled** data. There are two categories od supervised learning models, based on how the output is:\n",
     "- **regression**: continuous output *(e.g. a model extracting the direction of a street given its photo)*\n",
@@ -56,7 +54,16 @@
    "metadata": {},
    "source": [
     "## Neural networks\n",
-    "The "
+    "The cornerstone of supervised machine learnings are artificial neural networks (*ANN*). Inspired at the inner working of the **brain**, they were studied in their basic form until the eighties, but at that time computers were too slow for them to be able to learn anything useful. Only in the latest few years their usage rose significantly thanks to the much greater availability of computing power.\n",
+    "\n",
+    "### Structure\n",
+    "A neural network is made of basic units called *neurons*. Each aritificial neuron is fed with **one or multiple inputs** (which are combined by taking their sum) from which it calculates an output (i.e. the *activation* of a neuron) by applying an ***activation function*** (such as `tanh`, `ReLU` or `sigmoid`). This behaviour is similar to that of a natural neuron, which takes electric impulses as input and activates only if the total impulse is above a certain threshold. A classical neural network is composed of **multiple layers of neurons**, where the first one is the *input layer*, the last one is the *output layer*, and every other optional layer in between is a *hidden layer*. Each layer is fully connected to the next one with weighted edges.\n",
+    "\n",
+    "### Feedforward\n",
+    "When an input needs to be processed, it is assigned to the activations of the input layer. Then the *feedforward* process takes place: each neuron's activations in the current layer are **multiplied by the weights** of the edges going to the next layer's neurons, then the activations of the **next layer** are calculated and the process repeats on the next layer. At the end the **continuous** output can be found in the activations of the neurons in the output layer. A ***classification*** neural network usually has as many output neurons as there are *classes*, and the value (usually restricted in range 0 to 1) found in each neuron represents the **probability** for that class to be the corrected one, as predicted by the network.\n",
+    "\n",
+    "### Backpropagation\n",
+    "During the training process the network is able to learn from wrongly predicted outputs thanks to the backpropagation process. The label attached to the input sample, with the same number of dimensions as there are output neurons, also called *expected output*, is used to calculate how off the *predicted output* is from the expected one. Then every "
    ]
   },
   {
@@ -68,11 +75,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<sub>Notebook by Fabio Giovanazzi (@Stypox)</sub>"
+   ]
   }
  ],
  "metadata": {
